# TinyORMOnboarding

./: .gitmodules  BookModel.cpp  BookModel.hpp  CMakeLists.txt  CMakePresets.json  LICENSE  MyTinyTest.cpp  MyTinyTest.hpp  PublisherModel.cpp  PublisherModel.hpp  QSqlQueryTest.cpp  QSqlQueryTest.hpp  README.md  TinyOrmQueryTest.cpp  TinyOrmQueryTest.hpp  build.ps1  build.sh  test.ps1  vcpkg.json
.github/workflows/: all-presets.yml  build-and-test.yml  cmake.yml  typical-presets.yml
